--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "dependencies": {
-    "astro": "^5.2.5"
+    "@tailwindcss/vite": "^4.0.6",
+    "astro": "^5.2.5",
+    "tailwindcss": "^4.0.6"
   }
 }
