--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "prettier-plugin-tailwindcss": "^0.6.11"
   },
   "dependencies": {
+    "@astrojs/svelte": "^7.0.4",
     "@tailwindcss/vite": "^4.0.6",
     "astro": "^5.2.5",
-    "tailwindcss": "^4.0.6"
+    "svelte": "^5.19.10",
+    "tailwindcss": "^4.0.6",
+    "typescript": "^5.7.3"
   }
 }
