--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "eslint-plugin-astro": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "lucide-svelte": "^0.475.0",
+    "mode-watcher": "^0.5.1",
     "prettier": "^3.5.0",
     "prettier-plugin-astro": "^0.14.1",
     "prettier-plugin-svelte": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
+    "svelte-sonner": "^0.3.28",
     "tailwind-merge": "^3.0.1",
     "tailwind-variants": "^0.3.1"
   },
