--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@astrojs/svelte": "^7.0.4",
     "@tailwindcss/vite": "^4.0.6",
     "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.2.5",
     "svelte": "^5.19.10",
     "tailwindcss": "^4.0.6",
