--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "lint": "eslint ."
   },
   "devDependencies": {
+    "@lucide/svelte": "^0.487.0",
     "@tailwindcss/typography": "^0.5.16",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
-    "bits-ui": "^1.3.9",
+    "bits-ui": "^1.3.16",
     "clsx": "^2.1.1",
+    "embla-carousel-svelte": "^8.5.2",
     "eslint": "^9.20.1",
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-astro": "^1.3.1",
