--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "astro": "^5.2.5",
+    "astro-og-canvas": "^0.7.0",
     "lucide-svelte": "^0.487.0",
     "svelte": "^5.19.10",
     "tailwindcss": "^4.0.6",
