--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "astro": "^5.2.5",
     "astro-og-canvas": "^0.7.0",
     "lucide-svelte": "^0.487.0",
+    "rehype-external-links": "^3.0.0",
     "svelte": "^5.19.10",
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
