--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@lucide/svelte": "^0.487.0",
     "@tailwindcss/typography": "^0.5.16",
+    "@types/sanitize-html": "^2.15.0",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "^8.24.0",
     "bits-ui": "^1.3.16",
@@ -33,6 +34,7 @@
     "tailwind-variants": "^0.3.1"
   },
   "dependencies": {
+    "@astrojs/rss": "^4.0.11",
     "@astrojs/svelte": "^7.0.4",
     "@tailwindcss/vite": "^4.0.6",
     "@vercel/analytics": "^1.5.0",
@@ -40,9 +42,11 @@
     "astro": "^5.2.5",
     "astro-og-canvas": "^0.7.0",
     "lucide-svelte": "^0.487.0",
+    "marked": "^15.0.9",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "rehype-external-links": "^3.0.0",
+    "sanitize-html": "^2.16.0",
     "svelte": "^5.19.10",
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
