--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "rehype-external-links": "^3.0.0",
     "sanitize-html": "^2.16.0",
     "svelte": "^5.19.10",
+    "svelte-confetti": "^2.0.0",
     "tailwindcss": "^4.0.6",
     "typescript": "^5.7.3"
   }
