--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "@astrojs/rss": "^4.0.11",
     "@astrojs/svelte": "^7.0.4",
+    "@astrojs/vercel": "^8.1.4",
     "@tailwindcss/vite": "^4.0.6",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
